cmake_minimum_required(VERSION 3.12)
project(OOP5)

set(CMAKE_CXX_STANDARD 11)

add_executable(OOP5  Provided/part2/List.h Provided/part2/test.cpp Provided/part2/Utilities.h Provided/part2/CellType.h Provided/part2/Direction.h Provided/part2/BoardCell.h Provided/part2/GameBoard.h Provided/part2/MoveVehicle.h)